@@ -3,6 +3,8 @@
 
 Version 8.0.27
 
+  - Fix for Bug#104559 (33232419), ResultSet.getObject(i, java.util.Date.class) throws NPE when the value is null.
+
   - WL#14707, Support OCI IAM authentication.
 
   - WL#14660, Testsuite with support for single MySQL server instance.
